syntax="proto3";

option csharp_namespace = "AuthService.GrpcServer";
    
package auth;

service AuthService{
  rpc SaveTelegramId (SaveTelegramIdRequest) returns (SaveTelegramIdResponse);
  rpc GetTelegramIdByUserId (GetTelegramIdRequest) returns (GetTelegramIdResponse);
}

message SaveTelegramIdRequest {
  string userId = 1;
  int64 telegramId = 2;
}

message SaveTelegramIdResponse {
  bool success = 1;
}

message GetTelegramIdRequest {
  string userId = 1;
}

message GetTelegramIdResponse {
  int64 telegramId = 1;
}
